--- a/css/style.css
+++ b/css/style.css
@@ -49,19 +49,69 @@ textarea{
 
 
 body{
-  /* font-family: "Oswald", sans-serif; */
+  /* font-family: "Roboto Condensed", sans-serif; */
   font-family: "Poppins", sans-serif;
   font-style: normal;
-  font-size: 18px;
-  font-weight: 400;
-  color: #EEEEEE;
-  background-color: #222831;
+  line-height: normal;
+  font-size: 16px;
+  font-weight: 300;
+  color: #203239;
+  background-color: #EEEDDE;
 }
 
 /* Styles */
 .container{
-  max-width: 1290px;
+  max-width: 1166px;
   margin: 0 auto;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 0 15px;
+}
+
+
+
+/* Header */
+.nav__menu{
+  display: flex;
+  gap: 145px;
+  align-items: center;
+  padding-top: 50px;
+}
+.nav__logo{
+  font-family: "Roboto Condensed", sans-serif;
+  display: inline-flex;
+  align-items: center;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+}
+.nav__logo span{
+  font-size: 36px;
+  font-style: italic;
+  font-weight: 600;
+}
+.nav__list{
+  display: flex;
+}
+.nav__accordion{
+  position: relative;
+  max-width: 100px;
+}
+.nav__accordion::after{
+  content: "";
+  background-image: url(../images/arrow-menu.png);
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  background-size: cover;
+  display: inline-block;
+}
+.nav__list-item{
+  min-width: 83px;
+  margin-right: 17px;
+  transition: all .3s;
+}
+.nav__list-item:nth-child(3){
+  margin-right: 60px;
+}
+.nav__list-item:hover{
+  font-weight: 600;
 }
