--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,6 @@ body{
 }
 .nav__accordion{
   position: relative;
-  max-width: 100px;
 }
 .nav__accordion::after{
   content: "";
@@ -104,14 +103,37 @@ body{
   background-size: cover;
   display: inline-block;
 }
-.nav__list-item{
-  min-width: 83px;
-  margin-right: 17px;
+
+.nav__list-item a{
   transition: all .3s;
 }
-.nav__list-item:nth-child(3){
-  margin-right: 60px;
+
+.nav__list{
+  gap: 100px;
+}
+.nav__accordion{
+  margin-right: 24px;
+}
+
+
+.nav__list-item--line{
+  width: 20px;
+  height: 2px;
+  border-radius: 30px;
+  background-color: #F6762E;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+.nav__list-item{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4px;
 }
 .nav__list-item:hover{
-  font-weight: 600;
+  text-shadow: 0 0 .65px #203239, 0 0 .65px #203239;
+}
+
+.nav__list-item:hover .nav__list-item--line{
+  opacity: 1;
 }
