--- a/css/style.css
+++ b/css/style.css
@@ -123,12 +123,16 @@ body{
   background-color: #F6762E;
   opacity: 0;
   transition: opacity 0.3s ease;
+  position: absolute;
+  bottom: 0;
+  left: calc(100%);
 }
 .nav__list-item{
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 4px;
+  position: relative;
 }
 .nav__list-item:hover{
   text-shadow: 0 0 .65px #203239, 0 0 .65px #203239;
@@ -136,39 +140,4 @@ body{
 
 .nav__list-item:hover .nav__list-item--line{
   opacity: 1;
-}
-
-
-/* dropdown */
-.list-item__dropdown{
-  float: left;
-  overflow: hidden;
-}
-.list-item__dropdown .list-item__dropbtn{
-  font-size: 16px;    
-  border: none;
-  outline: none;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-.dropdown__content{
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  margin-top: 12px;
-}
-.dropdown__content a{
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-.list-item__dropdown:hover .dropdown__content {
-  display: block;
 }
