--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,12 @@ body{
   margin: 0 auto;
   padding: 0 15px;
 }
+.title{
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 150%;
+}
 
 
 
@@ -143,6 +149,9 @@ body{
 
 
 /* Hero */
+.hero{
+  margin-bottom: 50px;
+}
 .hero__text{
   font-style: normal;
   font-size: 56px;
@@ -236,4 +245,91 @@ body{
 .list__title--text{
   font-weight: 700;
   font-size: 16px;
+}
+
+/* Steps buy */
+.steps-buy{
+  background: #FFF;
+  margin-bottom: 200px;
+  padding-bottom: 200px;
+}
+.steps-buy__title{
+  max-width: 533px;
+  padding-top: 100px;
+  margin-bottom: 54px;
+}
+.buy-list{
+  display: flex;
+  justify-content: space-between;
+}
+.buy-list__item{
+  padding: 21px 20px 21px 34px;
+}
+.buy-list__item:hover{
+  border-radius: 10px;
+  border: 1px solid #EEEDDE;
+  padding: 20px 19px 20px 33px;
+}
+.buy-list__block{
+  max-width: 300px;
+  min-height: 300px;
+  position: relative;
+}
+.buy-list__title{
+  font-size: 16px;
+  font-weight: 500;
+  margin-bottom: 8px;
+  padding-top: 20px;
+}
+.buy-list__desc{
+  color: rgba(32, 50, 57, 0.55);
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 30px;
+  max-width: 232px;
+}
+.buy-list__btn{
+  min-height: 24px;
+  position: absolute;
+  bottom: 24px;
+  color: #203239;
+  z-index: 1;
+  cursor: pointer;
+}
+.buy-list__btn::before{
+  content: "";
+  width: 40px;
+  height: 30px;
+  background: #D6D5C7;
+  position: absolute;
+  bottom: -4px;
+  left: -6px;
+  z-index: -1;
+  transition: all .3s;
+
+}
+.buy-list__btn::after{
+  content: "";
+  background-image: url(../images/arrow-btn.svg);
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  background-size: cover;
+  bottom: 0;
+}
+.buy-list__btn:hover{
+  color: #fff;
+}
+.buy-list__btn:hover::after{
+  content: "";
+  background-image: url(../images/arrow-btn-white.svg);
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  background-size: cover;
+  bottom: 0;
+}
+.buy-list__btn:hover:before{
+  background-color: #FF7527;
+  width: 170px;
 }
