--- a/css/style.css
+++ b/css/style.css
@@ -503,3 +503,44 @@ body{
 .best-residence__check-more:hover{
   background: #FF7527;
 }
+
+/* House list */
+.house-list{
+  background-color: #fff;
+  padding-top: 68px;
+}
+.house-list__desc{
+  color: #FF7527;
+  font-weight: 500;
+  font-size: 16px;
+  margin-bottom: 8px;
+  max-width: 150px;
+}
+.house-list__title{
+  max-width: 430px;
+}
+
+.house-list__slider{
+  margin-top: 64px;
+  display: flex;
+  gap: 49px;
+}
+.house-item__img{
+  margin-bottom: 16px;
+}
+
+.house-item__title{
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 150%;
+  max-width: 262px;
+  margin-bottom: 8px;
+}
+.house-item__desc{
+  max-width: 356px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 30px;
+  margin-bottom: 68px;
+}
