--- a/css/style.css
+++ b/css/style.css
@@ -544,3 +544,52 @@ body{
   line-height: 30px;
   margin-bottom: 68px;
 }
+
+
+/* Contact */
+.contacts__inner{
+  padding-top: 48px;
+  padding-bottom: 100px;
+  display: flex;
+}
+.contacts__title{
+  display: block;
+  width: 100%;
+  max-width: 650px;
+}
+.contacts-list{
+  display: flex;
+  flex-wrap: wrap;
+}
+.contacts__title{
+
+}
+.contacts__call{
+  display: grid;
+  grid-template-rows: 56px 200px;
+  grid-template-columns: 48px 130px;
+  gap: 16px 37px;
+}
+.call__link{
+  grid-column-start: span 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 13px 41px;
+  border-radius: 10px;
+  background-color: rgba(255, 117, 39, 0.80);
+  width: 195px;
+  height: 50px;
+}
+
+
+
+.awards__title{
+  margin-left: 20px;
+}
+.awards__content{
+  display: flex;
+  align-items: center;
+  gap: 32px;
+  margin-top: 50px;
+}
