--- a/css/style.css
+++ b/css/style.css
@@ -560,15 +560,17 @@ body{
 .contacts-list{
   display: flex;
   flex-wrap: wrap;
+  gap: 48px;
 }
-.contacts__title{
 
-}
 .contacts__call{
   display: grid;
-  grid-template-rows: 56px 200px;
+  grid-template-rows: 56px;
   grid-template-columns: 48px 130px;
-  gap: 16px 37px;
+  gap: 16px 15px;
+  padding: 24px;
+  border-radius: 10px;
+  border: 1px solid rgba(255, 117, 39, 0.50);
 }
 .call__link{
   grid-column-start: span 2;
@@ -578,10 +580,28 @@ body{
   padding: 13px 41px;
   border-radius: 10px;
   background-color: rgba(255, 117, 39, 0.80);
-  width: 195px;
-  height: 50px;
+  max-height: 50px;
 }
 
+.contacts__email{
+  display: grid;
+  grid-template-rows: 56px;
+  grid-template-columns: 48px 130px;
+  gap: 16px 15px;
+  padding: 24px;
+  border-radius: 10px;
+  border: 1px solid rgba(255, 117, 39, 0.50);
+}
+.email__link{
+  grid-column-start: span 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 13px 41px;
+  border-radius: 10px;
+  background-color: rgba(255, 117, 39, 0.80);
+  max-height: 50px;
+}
 
 
 .awards__title{
